[package]
name = "webrtcperf-vmaf-utils"
description = "Utility for processing real time videos for VMAF evaluation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webrtcperf-vmaf-utils"
test = false
bench = false

[lib]
name = "webrtcperf_vmaf_utils"
path = "src/encoder.rs"
crate-type = ["cdylib", "lib"]
bench = false

[dependencies]
ffmpeg-next = "7.1.0"
regex = "1.11.1"
chrono = "0.4"
tesseract-rs = "0.1.18"
image = "0.25.4"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["blocking"] }
flate2 = "1.0.34"
log = "0.4.22"
env_logger = "0.11.5"
ctrlc = "3.4.5"
crossbeam-channel = "0.5.13"
